Fixed sections' vertical spacing and changed hero image - Also added checkmark icon

--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,6 +1,7 @@
 .contact-form {
-    padding: 0 15px;
     padding-bottom: 50px;
+    display: flex;
+    align-items: center;
 }
 
 .contact-form h2 {
