--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -1,13 +1,13 @@
 .portfolio {
-    padding: 100px 15px;
     padding-left: 0;
     padding-right: 0;
+    padding-bottom: 0;
 }
 
 .portfolio h2 {
     text-align: center;
-    margin-bottom: 40px;
-    padding: 0 30px;
+    margin-bottom: 0;
+    padding: 0 var(--horizontal-space);
 }
 
 .portfolio h3 {
@@ -61,7 +61,8 @@
     display: flex;
     gap: 5%;
     scroll-snap-type: x mandatory;
-    padding: 30px 0;
+    padding-top: var(--title-space);
+    padding-bottom: var(--vertical-space);
 }
 
 @media screen and (max-width: 1100px) {
