--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
     --accent-color: #00a6fc;
     --accent-hover-color: #0091dc;
     --box-shadow-color: #ebebeb;
+    --horizontal-space: 15px;
+    --vertical-space: 150px;
+    --title-space: 25px;
 }
 
 * {
@@ -28,6 +31,7 @@ h5,
 h6 {
     color: var(--text-color);
     font-weight: normal;
+    margin-bottom: var(--title-space);
 }
 
 p {
@@ -52,6 +56,14 @@ a:hover {
     margin: 0 auto;
 }
 
+section {
+    padding: calc(var(--horizontal-space) * 2) var(--horizontal-space);
+}
+
+section:nth-of-type(odd) {
+    margin-bottom: var(--vertical-space);
+}
+
 h1,
 h2 {
     font-size: 3.5em;
@@ -60,27 +72,13 @@ h2 {
 @media screen and (max-width: 1050px) {
     h1,
     h2 {
-        font-size: 3em;
+        font-size: 2.5em;
     }
 }
 
-@media screen and (max-width: 600px) {
-    h1,
-    h2 {
-        font-size: 2.25em;
-    }
-}
-
-@media screen and (max-width: 445px) {
+@media screen and (max-width: 700px) {
     h1,
     h2 {
         font-size: 2em;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    h1,
-    h2 {
-        font-size: 1.75em;
     }
 }
